Fixed title/ date not showing up on assignments / Added a button on details to go back to main assignments

--- a/front-end/src/components/Dashboard/InfoDisplay/StudentAssignments/studentassignment.css
+++ b/front-end/src/components/Dashboard/InfoDisplay/StudentAssignments/studentassignment.css
@@ -17,6 +17,10 @@
 
  }
 
+ .btn_all-assignments {
+  
+ }
+
  input.check-box {
    height: 10px;
    margin-top: -20px;
